--- a/intonation-marketing.css
+++ b/intonation-marketing.css
@@ -4,6 +4,12 @@
 
 .navbar-brand {
     padding-left: 12px;
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    max-width: 60px;
 }
 
 .container {
