--- a/intonation-marketing.css
+++ b/intonation-marketing.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #F9f9f9;
+}
+
 .navbar-toggler {
     border: 0;
 }
@@ -8,13 +12,34 @@
     align-items: center;
 }
 
+@media (min-width: 992px) {
+
+    .navbar-inner {
+        margin: 0 auto;
+        max-width: 1100px;
+        padding: 12px 0;
+    }
+
+    .navbar-nav {
+        width: 100%;
+        justify-content: end;
+        padding-right: 12px;
+    }
+}
+
 .logo {
     max-width: 60px;
 }
 
-.container {
-    padding-left: 24px;
-    padding-right: 24px;
+p {
+    color: #494b4c;
+}
+
+@media (max-width: 796px) {
+    .container {
+        padding-left: 24px;
+        padding-right: 24px;
+    }        
 }
 
 .toggle-text {
@@ -27,6 +52,18 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 12px;
+}
+
+@media (min-width: 768px) {
+    .logo-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }    
+}
+
+@media (min-width: 992px) {
+    .logo-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }    
 }
 
 .logo-grid img {
@@ -48,6 +85,15 @@ img.circle {
     padding-right: 6px;
 }
 
+@media (min-width: 768px) {
+    .client-feedback-container {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 24px;
+        align-items: center;
+    }
+}
+
 .client-feedback-container img {
     display: block;
     margin: 0 auto;
@@ -58,10 +104,41 @@ img.circle {
     text-align: center;
 }
 
+@media (min-width: 768px) {
+    .client-feedback-text span {
+        text-align: left;
+    }
+}
+
 .client-feedback-text p {
     margin-top: 12px;
 }
 
 #mc_embed_signup {
     max-width: 100%;
+    margin: 0 auto;
 }
+
+@media (min-width: 992px) {
+    #mc_embed_signup {
+        max-width: 600px;
+        margin: 0;
+    }    
+}
+
+#mc_embed_signup form {
+    margin: 0;
+}
+
+#mc_embed_signup .mc-field-group {
+    padding-bottom: 12px;
+}
+
+@media (min-width: 760px) {
+    /* .two-column-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 12px;
+    }     */
+}
+
